recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: not found: value stesp
		avance(stesp);gauche(steps);
                       ^